[metadata]
name = pytherma
version = 0.0.1
author = Chris Wilson
author_email = chris+pytherma@qwirx.com
description = "A Python library and tools for Daikin Altherma ASHPs"
long_description = file: README.md
url = https://github.com/qris/pytherma
classifiers =
    Programming Language :: Python :: 3
    OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: OS Independent

[options]
packages = pytherma
# As pytherma is a library, dependencies are expressed here:
# https://pipenv.pypa.io/en/latest/advanced/#pipfile-vs-setup-py
install_requires =
  more_itertools
  pySerial >= 3.4
  sqlalchemy

[options.entry_points]
console_scripts =
    monitor = pytherma.monitor:main
    poller = pytherma.poller:main
    simulator = pytherma.simulator:main
